# Project-Sentinel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
data/: eval_results.json
docs/: chapter4-handoff.md  cli-transcript.md  design-retrieve.md
frontend/: STYLE-GUIDE.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css  useTheme.js
frontend/src/pages/: Ask.jsx  Dashboard.jsx  Docs.jsx  Gold.jsx  Ingest.jsx  Login.jsx  Search.jsx  Settings.jsx
smart_extract/: __init__.py  auth.py  config.py  service.py  service_gold.py
smart_extract/api/: __init__.py  main.py
smart_extract/cli/: __init__.py  client.py  main.py  session.py
smart_extract/evaluation/: metrics.py
smart_extract/extraction/: __init__.py  extract.py  llm.py  nlp.py  prompts.py
smart_extract/graph/: __init__.py  store.py
smart_extract/intake/: __init__.py  base.py  image.py  pdf.py
smart_extract/query/: __init__.py  nl2cypher.py  retrieve.py
smart_extract/scripts/: __init__.py  bootstrap_admin.py  check_neo4j.py  download_arxiv.py  evaluate.py  label_gold.py  make_gold_template.py  make_photos.py  spike.py  spike_retrieve.py
tests/: test_auth.py  test_cli_client.py  test_intake_pdf.py  test_llm_retry.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_retrieve.py  test_service_gold.py  test_smoke.py
